force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/I_RS_Editable_Grid_Screen_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configurations for the editable-grid single-screen functionality.</description>
    <label>Editable Grid Screen Config</label>
    <pluralLabel>Editable Grid Screen Configs</pluralLabel>
</CustomObject>