force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Not_Soft_Deleted_Filter__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Not_Soft_Deleted_Filter__c</fullName>
    <description>We also wish to exclude soft-deleted items from the results, using the provided filter</description>
    <inlineHelpText>We also wish to exclude soft-deleted items from the results, using the provided filter</inlineHelpText>
    <label>&apos;Not-Soft-Deleted&apos; Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>