force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Object_to_aggregate__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object_to_aggregate__c</fullName>
    <description>The specific Code object being aggregated</description>
    <inlineHelpText>The specific Code object being aggregated</inlineHelpText>
    <label>Object to aggregate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classification_Code__c</fullName>
                <default>true</default>
                <label>Classification_Code__c</label>
            </value>
            <value>
                <fullName>Research_Output_Classification_Code__c</fullName>
            </value>
            <value>
                <fullName>ERA_Classification_Code__c</fullName>
            </value>
            <value>
                <fullName>Researcher_Classification_Code__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>