force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Parent_Lookup_Reference__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Lookup_Reference__c</fullName>
    <description>The non-Classification Master object the code looks up to, i.e. Project Proposal, so we can only show results under that particular parent record</description>
    <inlineHelpText>The non-Classification Master object the code looks up to, i.e. Project Proposal, so we can only show results under that particular parent record</inlineHelpText>
    <label>Parent Lookup Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>