force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Object_Name__c</fullName>
    <label>Parent Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>