force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Parent_Record_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_Record_Display_Fields__c</fullName>
    <label>Parent Record Display Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>