force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_PRIME_Back_Office_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PRIME_Back_Office_Page_Name__c</fullName>
    <description>The Lightning App Page used by admins and back-office</description>
    <inlineHelpText>The Lightning App Page used by admins and back-office</inlineHelpText>
    <label>PRIME Back Office Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>