force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_PRIME_Researcher_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PRIME_Researcher_Page_Name__c</fullName>
    <description>The Lightning Community page used by PRIME researchers</description>
    <inlineHelpText>The Lightning Community page used by PRIME researchers</inlineHelpText>
    <label>PRIME Researcher Portal Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>