force-app/main/default/objects/I_RS_Editable_Grid_Screen_Config__mdt/fields/I_RS_Researcher_Portal_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Researcher_Portal_if_applicable__c</fullName>
    <description>As there multiple portals available to non-back-office users, we may need to pre-decide which one to navigate to if clicking on any clickable links</description>
    <inlineHelpText>As there multiple portals available to non-back-office users, we may need to pre-decide which one to navigate to if clicking on any clickable links</inlineHelpText>
    <label>Researcher Portal (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIME Researcher</fullName>
                <default>true</default>
                <label>PRIME Researcher</label>
            </value>
            <value>
                <fullName>PRIME ERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>